# rust-git-gui

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  ipc.rs  lib.rs  models.rs
src-tauri/src/git_core/: mod.rs  repository.rs
src-tauri/src/modules/: blame_service.rs  branch_manager.rs  commit_service.rs  config_manager.rs  credential_manager.rs  dag_layout.rs  diff_service.rs  file_watcher.rs  host_integration.rs  mod.rs  rebase_service.rs  remote_manager.rs  repository_manager.rs  search_engine.rs  staging_service.rs  stash_manager.rs  submodule_manager.rs  tag_manager.rs  undo_engine.rs  view_filter.rs  worktree_manager.rs
src-tauri/tests/: integration_tests.rs
src/__tests__/: integration.test.tsx  setup.ts
src/components/: index.ts
src/components/BlameViewer/: BlameTimeline.tsx  BlameViewer.tsx  blameColorMap.ts  index.ts
src/components/CommitContextMenu/: CommitContextMenu.css  CommitContextMenu.tsx  index.ts  menuItems.ts
src/components/CommitEditor/: CommitEditor.tsx  TemplateSelector.tsx  commitTitleCheck.ts  index.ts
src/components/CommitGraph/: CommitDetail.tsx  dagColors.ts  (+4 more)
src/hooks/: index.ts  useHotkeys.ts  useSubmoduleUpdates.ts
src/i18n/: en.json  index.ts  ja.json  zh_CN.json
src/ipc/: client.ts  events.ts  index.ts  types.ts
src/stores/: index.ts  repoStore.ts  settingsStore.ts  uiStore.ts
src/themes/: dark.css  index.ts  light.css
(+85 files in other folders)
